--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,16 @@
             <artifactId>spring-context</artifactId>
             <version>5.0.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>spring</finalName>
